--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <h1><span class="material-symbols-outlined">dashboard</span>Dashboard</h1>
+            <ul>
+                <a href="">
+                    <li><span class="material-symbols-outlined">home</span> Home</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">groups</span> Groups</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">mail</span> Mail</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">history</span> History</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">task</span> Tasks</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">elderly_woman</span> Community</li>
+                </a>
+                <br>
+                <br>
+                <br>
+                <a href="">
+                    <li><span class="material-symbols-outlined">settings</span> Settings</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">support</span> Support</li>
+                </a>
+                <a href="">
+                    <li><span class="material-symbols-outlined">privacy</span> Privacy</li>
+                </a>
+            </ul>
+        </div>
+
+        <div class="topbar">
+
+        </div>
+
+        <div class="main">
+
+        </div>
+    </div>
 </body>
+
 </html>
